@@ -18,7 +18,7 @@ if __FILE__ == $0
 
   DRb::DRbServer.default_argc_limit(8)
   DRb::DRbServer.default_load_limit(4096)
-  DRb.start_service('drbssl://:0', DRbEx.new, config)
+  DRb.start_service('drbssl://localhost:0', DRbEx.new, config)
   es = DRb::ExtServ.new(ARGV.shift, ARGV.shift)
   DRb.thread.join
 end
